# Re-NNDD

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  typos.toml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  pages.yml  release-dryrun.yml  release.yml  security.yml
docs/: index.html  plugins.md
docs/references/: beast-note.md
docs/test-lists/: phase-1-0-schema.md  phase-1-1-search-api.md  phase-1-2-download-queue.md  phase-1-2-hls-parser.md  phase-1-3-library-query.md  phase-1-8-comment-snapshot.md  phase-1-9-comment-burnin.md
scripts/: check-case-collisions.sh  fetch-binaries.sh
scripts/burnin-verify/: README.md  smoke.ts  verify.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  local_server.rs  main.rs
src-tauri/src/api/: auth.rs  comment.rs  mod.rs  search.rs  types.rs  video.rs
src-tauri/src/downloader/: aes.rs  burnin.rs  comment_ass.rs  fetch.rs  ffmpeg.rs  hls.rs  mod.rs  mp4box.rs  mux.rs  run.rs  tools.rs  ytdlp.rs
src-tauri/src/plugins/: commands.rs  dispatcher.rs  installer.rs  manifest.rs  mod.rs  registry.rs  runtime.rs
src-tauri/tests/: api_search.rs  library_schema.rs
src/lib/: CommandPalette.svelte  MylistAddButton.svelte  Placeholder.svelte  RankingNgPanel.svelte  SearchHitCard.svelte  api.ts  consoleBridge.ts  format.ts  quickDownload.ts  relatedVideos.ts  sanitize.test.ts  sanitize.ts  theme.ts  thumbnail.test.ts  thumbnail.ts
src/lib/burnin/: browser.ts  comments.test.ts  comments.ts  core.test.ts  core.ts
src/lib/player/: CommentLayer.svelte  CommentList.svelte  ControlBar.svelte  (+8 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tests/e2e/: driver.mjs
(+31 files in other folders)
